- add mockito lib - add test for overdue items

--- a/simple-library/build.gradle
+++ b/simple-library/build.gradle
@@ -10,7 +10,8 @@ repositories {
 } 
 
 dependencies {
-  testCompile 'junit:junit:4.12'
+  testCompile 'junit:junit:4.12', 
+  			  'org.mockito:mockito-all:1.9.5'
 }
 
 test {
