--- a/swagger-demo/build.gradle
+++ b/swagger-demo/build.gradle
@@ -33,6 +33,10 @@ dependencies {
 
 	// https://mvnrepository.com/artifact/org.springdoc/springdoc-openapi-ui
 	compile group: 'org.springdoc', name: 'springdoc-openapi-ui', version: '1.3.7'
+
+	// https://mvnrepository.com/artifact/com.atlassian.oai/swagger-request-validator-springmvc
+	compile group: 'com.atlassian.oai', name: 'swagger-request-validator-springmvc', version: '2.9.1'
+
 }
 
 test {
