--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,6 @@
 theme: jekyll-theme-midnight
 title: ahoque.org
 google_analytics: G-28209RVRZB
+domain: ahoque.org
+url: https://ahoque.org
+baseurl: /ahoqueali.github.io/ 
