--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,8 @@
-theme: jekyll-theme-architect
+theme: minima
 title: ahoque.org
 google_analytics: G-28209RVRZB
 domain: ahoque.org
 url: https://ahoque.org
 baseurl: /ahoqueali.github.io/ 
+header_pages:
+  - contact.md
