--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
-theme: architect
+theme: minima
 title: ahoque.org
 google_analytics: G-28209RVRZB
 domain: ahoque.org
 url: https://ahoque.org
 baseurl: /ahoqueali.github.io/ 
-#header_pages:
+header_pages:
 #  - contact.md
 minima:
   skin: dark
