--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,8 @@
 remote_theme: pages-themes/architect@v0.2.0
 plugins:
-  - jekyll-remote-theme # add this line to the plugins list if you already have one
+  - jekyll-remote-theme
 
-#theme: jekyll-theme-hacker
 title: ahoque.org
-#description: my site
 domain: ahoque.org
 url: https://ahoque.org
 baseurl: /ahoqueali.github.io/ 
-#header_pages:
-#  - contact.md
