--- a/_config.yml
+++ b/_config.yml
@@ -6,4 +6,11 @@ title: ahoque.org
 description: Personal Blog Site
 domain: ahoque.org
 url: https://ahoque.org
-baseurl: /ahoqueali.github.io/ 
+baseurl: /ahoqueali.github.io/
+defaults:
+  -
+    scope:
+      path: ""      # empty string for all files
+      type: posts   # limit to posts
+    values:
+      is_post: true # automatically set is_post=true for all posts
