remove extral trailing slash

--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ title: ahoque.org
 description: Personal Blog Site
 domain: ahoque.org
 url: https://ahoque.org
-baseurl: /ahoqueali.github.io/
+baseurl: /ahoqueali.github.io
 defaults:
   -
     scope:
