--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,7 @@
 remote_theme: pages-themes/architect@v0.2.0
 plugins:
   - jekyll-remote-theme
+  - jekyll-sitemap
 
 title: ahoque.org
 description: Personal Blog Site
