--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,12 @@
-remote_theme: pages-themes/architect@v0.2.0
+remote_theme: pages-themes/midnight@v0.2.0
 plugins:
-  - jekyll-remote-theme
-  - jekyll-sitemap
+- jekyll-remote-theme # add this line to the plugins list if you already have one
+ - jekyll-sitemap
+
+# remote_theme: pages-themes/architect@v0.2.0
+# plugins:
+#   - jekyll-remote-theme
+#   - jekyll-sitemap
 
 title: ahoque.org
 description: Personal Blog
